@startuml

class Database {
    + Database()
    + ~Database()
    + void addMember(string name, string surname, string password, string category)
    + vector<string> getMember(string userID)
    + void addBook(string title, string author, string isbn, string genre, string issueNo, string historicalPeriod, string publicationDate, bool isAvailable)
    + vector<string> getBookInfo(string isbn)
    + bool verifyUser(const string& userId, const string& password)
    + bool isUserAdmin(const string& userId)
    + vector<vector<string>> listAvailableBooks()
    + void updateBookAvailability(string isbn, bool isAvailable)
}


class Library {
    - vector<Book*> books
    - vector<BasePerson*> persons
    - vector<Transaction*> transactions
    - Database db
    + Library()
    + void addBook(Book* book)
    + void addPerson(BasePerson* person)
    + void executeTransaction(Transaction* t)
}


Library o-- Book
Library o-- BasePerson
Library o-- Transaction


abstract class BasePerson {
    - string personId
    - string name
    - string email
    + void displayInfo() const
    + string getName() const
}

class Student {
    - int grade
    + Student()
    + void displayInfo() const
    + void setGrade(int grade)
    + int getGrade() const
}

class AcademicStaff {
    - string department
    - string position
    + AcademicStaff()
    + void displayInfo() const
    + void setDepartment(const string& department)
    + void setPosition(const string& position)
    + string getDepartment() const
    + string getPosition() const
}

BasePerson <|-- Student
BasePerson <|-- AcademicStaff


abstract class Transaction {
    - string transId
    - string date
    + void execute() 
}

class Borrow {
    - string borrowDate
    + void execute()
}

class Return {
    - string returnDate
    + void execute()
}

Transaction <|-- Borrow
Transaction <|-- Return

class Book {
    - string title
    - string author
    - string isbn
    + void checkout()
    + void returnBook()
    + string getTitle() const
    + string getAuthor() const
    + string getISBN() const
}

class Magazine {
    - string issueNo
    + void displayInfo() const
    + string getIssueNo() const
}

class Novel {
    - string genre
    + void displayInfo() const
    + string getGenre() const
}

class HistoryBook {
    - string historicalPeriod
    + void displayInfo() const
    + string getHistoricalPeriod() const
}

Book <|-- Magazine
Book <|-- Novel
Book <|-- HistoryBook

@enduml